# ROADIES

./: .Snakefile.swp  404.html  Dockerfile  HOXD55.q  LICENSE  README.md  Scrape.py  Snakefile  benchmark.py  c_stats.py  c_stats.sh  checkTree.py  clean.sh  combined.py  common_names2014.tre  config.yaml  converge.py  converge.sh  datarank.txt  envr.yaml  errors  fasta_links_30.txt  geneTrees.newick  genomes.tre  get_stats.py  get_stats.sh  get_values_from_genetrees.py  index.html  lastz_32  mapping.py  mapping.txt  mkdocs.yml  ot_214.tre  parse3.py  roadies_env.sh  run1.nwk  run2.nwk  run3.nwk  run4.nwk  run_roadies.py  (+5 more)
.github/: pull_request_template.md
ASTRAL/: Snakefile  astralLog  chain.py  geneTrees.newick  genes.fasta  msa.fasta  parallel_man  showTree.py  test_gen.py  tmp.bash  tree.newick  writeGT.py
Sequence_Select/: README.md  frag_GCA_008658365.1.fa  frag_GCA_009819605.1.fa  frag_GCA_009819775.1.fa  frag_GCA_009819825.1.fa  frag_GCA_011004875.1.fa  frag_GCA_012275265.1.fa  frag_GCA_013368605.1.fa  frag_GCA_013407035.1.fa  frag_GCA_014839755.1.fa  frag_GCA_014839835.1.fa  frag_GCA_015220805.1.fa  frag_GCA_016128335.1.fa  frag_GCA_016904835.1.fa  frag_GCA_017639245.1.fa  frag_GCA_017639485.1.fa  frag_GCA_017639555.1.fa  frag_GCA_017976375.1.fa  frag_GCA_018139145.1.fa  frag_GCA_020740795.1.fa  frag_GCA_020745705.1.fa  frag_GCA_020745775.1.fa  frag_GCA_020746105.1.fa  frag_GCA_020800305.1.fa  frag_GCA_020801775.1.fa  frag_GCA_902806625.1.fa  frag_GCA_905368555.1.fa  frag_GCA_907165065.1.fa  (+20 more)
workflow/scripts/sampling/: CMakeLists.txt  kseq.h  sampling.cpp
(+4494 files in other folders)
